<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_client_dil_hd"
        android:padding="8dp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_new_client_name_hint"
            android:inputType="textPersonName"
            android:id="@+id/et_client_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_contact_number_hint"
            android:inputType="phone"
            android:id="@+id/et_contact_number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_residential_address_hint"
            android:inputType="textPostalAddress"
            android:id="@+id/et_residential_address"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/actions_layout" />

</LinearLayout>