<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo"
            android:src="@mipmap/pes" />


    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/actions"
        android:layout_margin="25dp"
        android:layout_above="@id/dfa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#ff0042"
            android:text="@string/txt_register"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/txt_login_btn"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dfa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/ln_loading_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/pes"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@color/colorAccent" />

    </LinearLayout>


</RelativeLayout>